e feat: implement AnnotationUtils and refactor CLI argument handling for improved clarity